Adding numpyro.NUTS sampler support
Also removing more old traces of PyMC3

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ install_requires =
     mc3 # Needed for uncertainties in the RMS time-averaging plots in S5
     numpy>=1.20.0
     pandas
-    pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
+    pastasoss>=1.2.2
     photutils
     # planet-harmonica # Currently only supports for python 3.8 -- 3.10
     planet-harmonica@git+https://github.com/DavoGrant/harmonica@main
@@ -77,7 +77,7 @@ docs =
     sphinx-rtd-theme
 test =
     flake8
-    pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
+    pytest<8.0 # Upper limit needed to avoid some conflict between pytest and asdf
     pytest-cov
     pytest-doctestplus
 jax =
