Fixing jax's HarmonicaModel.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,7 @@ jax =
     jaxopt
     numpyro
     numpyro_ext
+    specutils
 jupyter =
     ipykernel
     ipympl # Needed for the interactive matplotlib backend
