Enhance plotting functionality and style consistency across modules
- Added a decorator to apply a consistent plotting style across various plotting functions.
- Updated file-saving logic to utilize a centralized method for determining file types, improving maintainability.
- Introduced a new matplotlib style configuration file (`eureka.mplstyle`) to standardize plot aesthetics.
- Refactored plotting functions to use the new style settings and removed redundant rc parameter setups in test files.
- Implemented logging for missing dependencies instead of print statements for better error handling and user feedback.

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ project_urls =
     Source Code = https://github.com/kevin218/Eureka
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 
@@ -23,6 +23,7 @@ package_dir =
 packages = find:
 zip_safe = True
 python_requires= >=3.11,<3.14
+include_package_data = True
 install_requires =
     astraeus@git+https://github.com/kevin218/Astraeus@main
     astropy
@@ -56,6 +57,10 @@ install_requires =
     stdatamodels
     svo_filters
     tqdm
+
+
+[options.package_data]
+eureka.lib = *.mplstyle
 
 
 [options.packages.find]
