--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ author_email = kbstevenson@gmail.com
 description = A data reduction and analysis pipeline intended for time-series observations with JWST.
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = MIT License
-license_files = [LICENSE,]
+license = MIT
+license_files = LICENSE
 url = https://github.com/kevin218/Eureka
 project_urls =
     Bug Tracker = https://github.com/kevin218/Eureka/issues
