--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -23,8 +23,8 @@ jobs:
           python-version: '3.13.0'
       - name: Setup Environment
         run: |
-          python -m pip install --upgrade pip
-          pip install .[jwst,hst,test]
+          python -m pip install --timeout 60 --retries 5 --upgrade pip
+          pip install --timeout 60 --retries 5 ".[jwst,hst,test]"
           mkdir $HOME/crds_cache
           echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
           echo "CRDS_SERVER_URL=https://jwst-crds.stsci.edu" >> $GITHUB_ENV
