--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ packages = find:
 zip_safe = True
 python_requires= >=3.11,<3.14
 install_requires =
-    astraeus@git+https://github.com/kevin218/Astraeus@main
+    astraeus-io
     astropy
     astroquery
     batman-package
