--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = eureka
+name = eureka-bang
 author = Eureka! pipeline developers
 author_email = kbstevenson@gmail.com
 description = A data reduction and analysis pipeline intended for time-series observations with JWST.
