Using new PyPI version of catwoman

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ install_requires =
     astroquery
     batman-package
     bokeh
-    catwoman@git+https://github.com/KathrynJones1/catwoman@master
+    catwoman>=1.0.15 # Lower limit needed to avoid installation bug
     ccdproc
     celerite2 # Needed for GP
     corner
