--- a/environment.yml
+++ b/environment.yml
@@ -37,7 +37,7 @@ dependencies:
     - pip:
         - astraeus-io
         - batman-package
-        - catwoman@git+https://github.com/taylorbell57/catwoman@master
+        - catwoman>=1.0.15 # Lower limit needed to avoid installation bug
         - celerite2 # Needed for GP
         - crds
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
